# ifeasy

./: .gitignore  README.md  package-lock.json  package.json
dna/coordinator_zomes/ifeasy/: Cargo.toml
dna/coordinator_zomes/ifeasy/src/: ifeasy.rs  lib.rs
dna/integrity_zomes/ifeasy_integrity/: Cargo.toml
dna/integrity_zomes/ifeasy_integrity/src/: lib.rs
dna/integrity_zomes/ifeasy_integrity/src/ifeasy/: definition.rs
dna/workdir/: dna.yaml
nix/: sources.json
tests/src/: index.ts  utils.ts
tests/src/ifeasy/ifeasy/: ifeasy.ts
ui/: package.json
ui/src/: holochain-app.ts
ui/src/components/ifeasy/ifeasy/: create-ifeasy.ts  ifeasy-detail.ts
ui/src/types/ifeasy/: ifeasy.ts
workdir/: happ.yaml  web-happ.yaml
