[package]
edition = "2021"
name = "ifeasy"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ifeasy"

[dependencies]
serde = "=1.0.136"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
derive_more = "0"
ifeasy_integrity = { path = "../../integrity_zomes/ifeasy_integrity" }

hdk = "0.0.152"
